--- a/css/main.css
+++ b/css/main.css
@@ -100,6 +100,11 @@ textarea {
 
    /* -------------------- Base Header - Footer Styles -------------------- */
   
+.content-wrapper {
+  width: 90%;
+  margin: 50px 0;
+}
+
 header,
 footer {
   display: flex;
@@ -108,11 +113,22 @@ footer {
   flex-flow: row wrap;
 } 
 
+header {
+  padding: 15px 0;
+}
+
 header .content-wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  margin: 0;
+}
+
+.header-divider {
+  width: 100%;
+  height: 1px;
+  margin: 10px 0 20px 0;
 }
 
 header nav {
@@ -120,11 +136,25 @@ header nav {
   justify-content: space-around;
   align-items: center;
   flex-flow: row wrap;
+  width: 60%;
 }
 
 header nav ul {
   display: flex;
   justify-content: space-around;
+  width: 100%;
+}
+
+footer {
+  flex-direction: column;
+}
+
+footer p {
+  margin: 0;
+}
+
+footer .contact {
+  margin-bottom: 50px;
 }
 
 footer .social-icons {
@@ -139,6 +169,17 @@ footer .social-icons p {
   align-items: center;
 }
 
+footer .content-wrapper {
+  width: 55%;
+  margin: 50px 0;
+}
+
+footer .copyright {
+  margin: 20px 0;
+}
+
+
+
  /* -------------------- Mobile - Homepage Styles -------------------- */
 
 .hero-area {
@@ -146,6 +187,7 @@ footer .social-icons p {
   justify-content: center;
   flex-flow: row wrap;
 }
+
 
 aside {
   display: flex;
@@ -160,11 +202,24 @@ aside {
   flex-flow: row wrap;
 }
 
-.features-items {
+.features article {
+  width: 55%;
+  margin: 30px 0;
+}
+
+.features h2 {
+  margin-bottom: 60px;
+}
+
+.features .features-items {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+}
+
+.features p {
+  margin: 0;
 }
 
 .reviews {
@@ -172,6 +227,19 @@ aside {
   justify-content: center;
   flex-flow: row wrap;
 }
+
+.reviews h2 {
+  margin-bottom: 40px;
+}
+
+.reviews h3 {
+  width: 55%;
+  margin: 20px 0;
+}
+
+/* ==========================================================================
+   About Page
+   ========================================================================== */
 
 .mission {
   display: flex;
@@ -187,6 +255,15 @@ aside {
   flex-flow: row wrap;
 }
 
+.contact-content p {
+  margin: 0;
+}
+
+
+/* ==========================================================================
+   FAQ Page
+   ========================================================================== */
+
 .faq {
   display: flex;
   justify-content: center;
@@ -195,10 +272,19 @@ aside {
 }
 
 .faq .content-wrapper {
+  margin: 50px 0 0 0;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+}
+
+.faq h2 {
+  margin-bottom: 40px;
+}
+
+.faq-content {
+  margin-bottom: 50px;
 }
 
 
