--- a/css/main.css
+++ b/css/main.css
@@ -182,12 +182,15 @@ footer .copyright {
 
  /* -------------------- Mobile - Homepage Styles -------------------- */
 
+/* Hero Area */
+
 .hero-area {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
 }
 
+/* Aside */
 
 aside {
   display: flex;
@@ -196,10 +199,16 @@ aside {
   flex-flow: row wrap;
 }
 
+/* Features */
+
 .features {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
+}
+
+.features h2 {
+  margin-bottom: 60px;
 }
 
 .features article {
@@ -207,11 +216,7 @@ aside {
   margin: 30px 0;
 }
 
-.features h2 {
-  margin-bottom: 60px;
-}
-
-.features .features-items {
+.features-items {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -221,6 +226,8 @@ aside {
 .features p {
   margin: 0;
 }
+
+/* Reviews */
 
 .reviews {
   display: flex;
@@ -377,15 +384,141 @@ aside {
    Modify as content requires.
    ========================================================================== */
 
-@media only screen and (min-width: 35em) {
-  /* Style adjustments for viewports that meet the condition */
+@media only screen and (min-width: 768px) {
+  /*Tablet Styles Here*/
+  .content-wrapper {
+    max-width: 640px;
+    margin: 100px 0;
+  }
+
+  /*header*/
+
+  header {
+    justify-content: space-around;
+  }
+
+  header .content-wrapper {
+    width: 100%;
+    justify-content: space-between;
+  }
+
+  header nav {
+    width: 20%;
+  }
+
+  header nav ul {
+    justify-content: space-between;
+  }
+
+  .header-divider {
+    display: none;
+  }
+
+  /*aside*/
+
+  aside .content-wrapper {
+    margin: 50px 0;
+    display: flex;
+    justify-content: space-between;
+    flex-flow: row wrap;
+  }
+
+  aside .content-wrapper .form-text,
+  aside .content-wrapper .form-input {
+    width: 35%;
+    margin: 0;
+  }
+
+  /*features*/
+
+  .features article {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-flow: column wrap;
+    flex-basis: 50%;
+  }
+
+  .features .features-item-description {
+    width: 50%;
+  }
+
+  /*reviews*/
+
+  .reviews article {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .reviews article div {
+    width: 49%;
+  }
+
+  /*footer*/
+
+  footer .content-wrapper {
+    width: 65%;
+    margin: 100px 0;
+  }
+
+  .footer-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  footer .contact {
+    margin-bottom: 0;
+  }
+
+  footer .copyright {
+    width: 100%;
+  }
+
+/* ==========================================================================
+   About Page
+   ========================================================================== */
+
+  .mission-content {
+    display: flex;
+    justify-content: space-between;
+    align-content: center;
+  }
+
+  .mission-content p {
+    width: 40%;
+  }
+
+  .contact-section .contact-wrapper h2 {
+    width: 80%
+  }
+
+  .contact-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+  }
+
+/* ==========================================================================
+   FAQ Page
+   ========================================================================== */
+
+  .faq .content-wrapper {
+    justify-content: space-between;
+  }
+
+  .faq-content {
+    flex-basis: 40%;
+  }
+
+  .faq h2 {
+    width: 100%;
+  }
+
 }
 
-@media print,
-  (-webkit-min-device-pixel-ratio: 1.25),
-  (min-resolution: 1.25dppx),
-  (min-resolution: 120dpi) {
-  /* Style adjustments for high resolution devices */
+@media only screen and (min-width: 1200px) {
+  /*Desktop Styles Here*/
 }
 
 /* ==========================================================================
