--- a/css/main.css
+++ b/css/main.css
@@ -519,6 +519,69 @@ aside {
 
 @media only screen and (min-width: 1200px) {
   /*Desktop Styles Here*/
+
+  .content-wrapper {
+    max-width: 960px;
+  }
+
+  /*header*/
+
+  .hero-area h1 {
+    width: 60%  
+  }
+
+  /*aside*/
+
+  aside .content-wrapper {
+    justify-content: space-around;
+  }
+
+  aside .content-wrapper .form-text,
+  aside .content-wrapper .form-input {
+    width: 30%;
+  }
+
+  /*features*/
+
+  .features article {
+    flex-basis: 33.3%;
+  }
+
+  .features h2 {
+    width: 70%;
+  }
+
+  /*reviews*/
+
+  .reviews article div {
+    width: 42%;
+  }
+
+  /* ==========================================================================
+   About Page
+   ========================================================================== */
+
+   .mission h2,
+   .contact-section .content-wrapper h2 {
+       width: 100%;
+   }
+
+   .contact-section .content-wrapper h2 {
+    margin-bottom: 40px;
+  }
+
+/* ==========================================================================
+   FAQ Page
+   ========================================================================== */
+
+   .faq h2 {
+    width: 100%;
+}
+
+  .faq-content {
+    flex-basis: 35%;
+  }
+
 }
 
 /* ==========================================================================
