--- a/css/main.css
+++ b/css/main.css
@@ -109,6 +109,11 @@ body {
   font-size: 1em;
 }
 
+ul, 
+ol {
+ 
+}
+
 h1 {
   font-family: 'Poppins', sans-serif;
   font-size: 2.25em;
@@ -136,6 +141,18 @@ address {
 
 p {
   line-height: 1.5em;
+}
+
+img {
+ 
+}
+ 
+figure {
+ 
+}
+
+.content-wrapper {
+ 
 }
 
 
