--- a/css/main.css
+++ b/css/main.css
@@ -107,27 +107,33 @@ html {
 body {
   font-family: 'Open Sans', sans-serif;
   font-size: 1em;
+  color: #e2e3ed;
+  text-align: left;
 }
 
 ul, 
 ol {
- 
+  list-style-type: none;
 }
 
 h1 {
   font-family: 'Poppins', sans-serif;
-  font-size: 2.25em;
+  font-size: 2;
+  font-weight: 500;
 }
 
 h2 {
   font-family: 'Poppins', sans-serif;
   font-size: 1.875em;
+  font-weight: 500;
 }
 
 h3, 
 h4 {
   font-family: 'Poppins', sans-serif;
   font-size: 1.125em;
+  margin: 20px 0;
+  font-weight: 500;
 }
 
 a {
@@ -141,6 +147,8 @@ address {
 
 p {
   line-height: 1.5em;
+  font-size: 1.285em;
+  color: #e2e3ed;
 }
 
 img {
@@ -151,9 +159,43 @@ figure {
  
 }
 
-.content-wrapper {
+
+
+aside,
+.mission,
+.faq {
  
 }
+
+aside .form-input {
+  margin-top: 30px;
+}
+
+input[type=text] {
+  box-sizing: border-box;
+  width: 100%;
+  color: #2a423a;
+  font-style: italic;
+}
+
+input[type=button] {
+  width: 100%;
+  padding: 20px 0;
+  margin-top: 20px;
+  background-color: #2a423a;
+  font-family: 'Poppins', Helvetica, Arial, sans-serif;
+  font-weight: 500;
+  font-size: 1.125em;
+  color: #e2e3ed;
+  border: none;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.features-item-description {
+  text-align: center;
+}
+
 
 
 
@@ -171,6 +213,7 @@ footer {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  background: #202322;
 }
 
 header {
@@ -189,6 +232,7 @@ header .content-wrapper {
   width: 100%;
   height: 1px;
   margin: 10px 0 20px 0;
+  background: #3a3a3a;
 }
 
 header nav {
@@ -197,6 +241,9 @@ header nav {
   align-items: center;
   flex-flow: row wrap;
   width: 60%;
+  font-size: 1.125em;
+  font-weight: 700;
+  text-transform: uppercase;
 }
 
 header nav ul {
@@ -209,6 +256,7 @@ header nav ul {
 
 footer {
   flex-direction: column;
+  text-align: center;
 }
 
 footer .content-wrapper {
@@ -256,6 +304,7 @@ aside {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
+  background: #527158;
 }
 
 /* Features */
@@ -292,6 +341,7 @@ aside {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
+  background: #2a423a;
 }
 
 .reviews h2 {
@@ -312,6 +362,7 @@ aside {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  background: #527158;
 }
 
 .contact-section {
@@ -319,6 +370,7 @@ aside {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  background: #2a423a;
 }
 
 .contact-content p {
@@ -334,6 +386,7 @@ aside {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  background: #527158;
  }
 
  .faq .content-wrapper {
@@ -350,6 +403,11 @@ aside {
 
 .faq-content {
   margin-bottom: 50px;
+}
+
+.faq-content h4 {
+  line-height: 1.333;
+  font-weight: 700;
 }
 
 /* ==========================================================================
@@ -448,6 +506,16 @@ aside {
    margin: 100px 0;
  }
 
+ h2 {
+  font-size: 2.25em;
+  line-height: 1.333;
+}
+
+h3 {
+  font-size: 1.5em;
+  line-height: 1.25;
+}
+
  /* Header */
 
  header {
@@ -472,6 +540,12 @@ aside {
  }
 
  /* Hero Area */
+
+ .hero-area h1 {
+  font-size: 3em;
+  line-height: 1;
+  margin: 0;
+}
 
  /* Aside */
 
@@ -502,6 +576,10 @@ aside {
    width: 50%;  /* try 50% */
  }
 
+ .features h2 {
+  margin: 0 20px 20px 0;
+}
+
  /* Reviews */
 
  .reviews article {
@@ -512,6 +590,15 @@ aside {
  .reviews article div {
    width: 50%;
  }
+
+ .reviews h2 {
+  width: 90%;
+}
+
+.reviews h3 {
+  width: 75%;
+  margin: 0;
+}
 
  /* Footer */
 
@@ -533,6 +620,15 @@ aside {
  footer .copyright {
     width: 100%;
  }
+
+ footer h4 {
+  font-size: 1.5em;
+  margin-bottom: 40px;
+}
+
+footer p {
+    line-height: 1.285;
+}
 
   /* ==========================================================================
    About Page
@@ -558,6 +654,10 @@ aside {
   align-items: flex-start;
  }
 
+ .contact-content h4 {
+  font-size: 1.5em;
+}
+
  /* ==========================================================================
    FAQ Page
    ========================================================================== */
@@ -573,12 +673,32 @@ aside {
  .faq h2 {
   width: 100%;
  }
+
+ .faq h4,
+ .faq p {
+     font-size: .875em;
+     line-height: 1.125;
+ }
 }
 
 @media only screen and (min-width: 1200px) {
   /* Desktop Styles */
  .content-wrapper {
    max-width: 960px;
+ }
+
+ h2 {
+  font-size: 2.25em;
+ }
+
+ h3,
+ h4 {
+    font-size: 1.875em;
+ }
+
+ p {
+    font-size: 1.125em;
+    line-height: 1.333;
  }
 
  header nav ul {
@@ -589,6 +709,7 @@ aside {
 
  .hero-area h1 {
   width: 60%;
+  font-size: 3.75em;
 }
 
  /* Aside */
@@ -615,7 +736,7 @@ aside {
   /* Reviews */
 
  .reviews article div {
-   width: 33%;
+   width: 42%;
  }
 
  /* ==========================================================================
