--- a/css/main.css
+++ b/css/main.css
@@ -683,6 +683,10 @@ footer p {
   width: 45%;
  }
 
+ .map figure {
+  padding-bottom: 45%; 
+}
+
  .contact-section .content-wrapper h2 {
   width: 80%;
 }
@@ -791,6 +795,10 @@ footer p {
   width: 100%; /*try 100*/
   font-size: 3em;
  }
+
+ .map figure {
+  padding-bottom: 37.5%; 
+}
 
  .contact-section h2 {
   margin-bottom: 30px;
