--- a/css/main.css
+++ b/css/main.css
@@ -333,11 +333,17 @@ aside {
 
 .features p {
   margin: 0;
+  text-align: center;
 }
 
 .features article {
-  width: 60%;
+  width: 55%;
   margin: 30px 0;
+}
+
+.features i {
+	font-size: 3.75em;
+  margin-bottom: 40px;
 }
 
 /* Reviews */
