--- a/css/main.css
+++ b/css/main.css
@@ -274,6 +274,14 @@ footer .social-icons p {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #527158;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+}
+
+footer .social-icons p i {
+  font-size: 1.3125em;
 }
 
 footer .copyright {
@@ -608,13 +616,13 @@ h3 {
  .features article {
   display: flex;
   justify-content: center;
-  align-content: center;
+  align-items: center;
   flex-flow: column wrap;  /* try column wrap */
   flex-basis: 50%;
  }
 
  .features .features-item-description {
-   width: 50%;  /* try 50% */
+   width: 65%;  /* try 50% */
  }
 
  .features h2 {
@@ -656,6 +664,12 @@ h3 {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-direction: row;
+ }
+
+ .social-icons {
+   justify-content: space-between;
+   width: 12.5em;
  }
 
  footer .contact {
